apps/obsidian-livesync/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: obsidian-livesync
  labels:
    name: obsidian-livesync
