apps/obsidian-livesync/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: obsidian-livesync
  namespace: obsidian-livesync
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system
  hostnames:
    - "obsidian.buildin.group"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: client-max-body-size
                value: "100m"
      backendRefs:
        - name: obsidian-livesync
          port: 80
